# subspace

./: Cargo.toml  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
auto_id_domain_runtime/: all.html  constant.EXISTENTIAL_DEPOSIT.html  constant.MAXIMUM_BLOCK_WEIGHT.html  constant.RUNTIME_API_VERSIONS.html  constant.VERSION.html  constant.WASM_BINARY.html  constant.WASM_BINARY_BLOATY.html  enum.HoldIdentifier.html  enum.MultiAddress.html  enum.OriginCaller.html  enum.RuntimeCall.html  enum.RuntimeError.html  enum.RuntimeEvent.html  enum.RuntimeFreezeReason.html  enum.RuntimeHoldReason.html  enum.RuntimeLockId.html  enum.RuntimeSlashReason.html  enum.RuntimeTask.html  fn.block_weights.html  fn.extract_signer.html  fn.maximum_block_length.html  index.html  sidebar-items.js  struct.BlockHashCount.html  struct.ChannelFeeModel.html  struct.ChannelInitReservePortion.html  struct.ChannelReserveFee.html  struct.DomainChainByteFee.html  struct.DustRemovalHandler.html  struct.ExistentialDeposit.html  struct.ExtrinsicStorageFees.html  struct.FinalDomainTransactionByteFee.html  struct.IntoRuntimeCall.html  struct.MaxHolds.html  struct.MaxLocks.html  struct.MaxReserves.html  struct.MmrProofVerifier.html  struct.OnXDMRewards.html  struct.OperationalFeeMultiplier.html  struct.PalletInfo.html  (+46 more)
auto_id_domain_test_runtime/: all.html  constant.EXISTENTIAL_DEPOSIT.html  constant.RUNTIME_API_VERSIONS.html  constant.VERSION.html  constant.WASM_BINARY.html  constant.WASM_BINARY_BLOATY.html  enum.HoldIdentifier.html  enum.MultiAddress.html  enum.OriginCaller.html  enum.RuntimeCall.html  enum.RuntimeError.html  enum.RuntimeEvent.html  enum.RuntimeFreezeReason.html  enum.RuntimeHoldReason.html  enum.RuntimeLockId.html  enum.RuntimeSlashReason.html  enum.RuntimeTask.html  fn.block_weights.html  fn.extract_signer.html  fn.maximum_block_length.html  index.html  sidebar-items.js  struct.BlockHashCount.html  struct.ChannelFeeModel.html  struct.ChannelInitReservePortion.html  struct.ChannelReserveFee.html  struct.DomainChainByteFee.html  struct.DustRemovalHandler.html  struct.ExistentialDeposit.html  struct.ExtrinsicStorageFees.html  struct.FinalDomainTransactionByteFee.html  struct.IntoRuntimeCall.html  struct.MaxLocks.html  struct.MaxReserves.html  struct.MmrProofVerifier.html  struct.OnXDMRewards.html  struct.OperationalFeeMultiplier.html  struct.PalletInfo.html  struct.Perbill.html  struct.Permill.html  (+43 more)
cirrus_block_builder/: all.html  enum.RecordProof.html  index.html  struct.BlockBuilder.html  struct.BuiltBlock.html  trait.BlockBuilderApi.html  trait.BlockBuilderProvider.html
cirrus_client_executor/: all.html  enum.GossipMessageError.html  fn.forward_events.html  fn.start_executor.html  index.html  sidebar-items.js  struct.BlockInfo.html  struct.Executor.html  struct.ExecutorSlotInfo.html  struct.GossipMessageError.html  struct.Overseer.html  struct.OverseerHandle.html  struct.StartExecutorParams.html  trait.PrimaryChainClient.html
cirrus_client_executor_gossip/: all.html  enum.Action.html  enum.GossipMessage.html  fn.executor_gossip_peers_set_config.html  fn.start_gossip_worker.html  index.html  sidebar-items.js  struct.ExecutorGossipParams.html  struct.GossipValidator.html  trait.GossipMessageHandler.html
cirrus_client_service/: all.html  fn.build_subspace_full_node.html  fn.prepare_node_config.html  fn.start_executor.html  fn.start_full_node.html  index.html  sidebar-items.js  struct.PrimaryFullNode.html  struct.SharedImportQueue.html  struct.StartExecutorParams.html  struct.StartFullNodeParams.html
cirrus_fraud_proof/: all.html  fn.check_execution_proof.html  fn.prove_execution.html  index.html  sidebar-items.js
cirrus_node/: all.html  index.html  sidebar-items.js
cirrus_node_primitives/: all.html  index.html  sidebar-items.js  struct.BundleResult.html  struct.Collation.html  struct.CollationGenerationConfig.html  struct.CollationResult.html  struct.ExecutorSlotInfo.html  struct.HeadData.html  struct.PersistedValidationData.html  struct.ProcessorResult.html  type.BlockWeight.html  type.BundlerFn.html  type.CollationSecondedSignal.html  type.CollatorFn.html  type.CollatorId.html  type.CollatorPair.html  type.CollatorSignature.html  type.ProcessorFn.html
cirrus_pallet_executive/: all.html  enum.Call.html  enum.Event.html  index.html  sidebar-items.js  struct.Executive.html  struct.Pallet.html  trait.Config.html  type.CallOf.html  type.CheckedOf.html  type.Module.html  type.OriginOf.html
cirrus_primitives/: all.html  index.html  sidebar-items.js  trait.SecondaryApi.html  trait.Signer.html  type.AccountId.html  type.Address.html  type.Balance.html  type.BlockNumber.html  type.Hash.html  type.Index.html  type.Signature.html
cirrus_runtime/: all.html  constant.DAYS.html  constant.EXISTENTIAL_DEPOSIT.html  constant.HOURS.html  constant.MICROUNIT.html  constant.MILLISECS_PER_BLOCK.html  constant.MILLIUNIT.html  constant.MINUTES.html  constant.PRIMARY_PROBABILITY.html  constant.SLOT_DURATION.html  constant.UNIT.html  constant.VERSION.html  constant.WASM_BINARY.html  constant.WASM_BINARY_BLOATY.html  enum.Call.html  enum.Event.html  enum.MultiAddress.html  enum.OriginCaller.html  fn.native_version.html  index.html  sidebar-items.js  struct.BlockHashCount.html  struct.EpochDuration.html  struct.ExistentialDeposit.html  struct.Origin.html  (+54 more)
crates/sc-merkle-mountain-range/: Cargo.toml
crates/sc-merkle-mountain-range/src/: aux_schema.rs  lib.rs  offchain_mmr.rs  test_utils.rs
crates/subspace-proof-of-time/aes/methods/guest/: Cargo.toml
crates/subspace-proof-of-time/aes/methods/guest/src/: main.rs
domains/client/rpc/: Cargo.toml
domains/client/rpc-api/: Cargo.toml
domains/client/rpc-api/src/: lib.rs  operator.rs
domains/client/rpc/src/: lib.rs  operator.rs
domains/pallets/auto-id/: Cargo.toml
domains/pallets/auto-id/src/: benchmarking.rs  lib.rs  tests.rs  utils.rs
shared/subspace-cluster-networking/: Cargo.toml
shared/subspace-cluster-networking/src/: lib.rs  network.rs  network_worker.rs  request_response.rs  shared.rs  tests.rs
(+8397 files in other folders)
