[package]
name = "domain-rpc-api"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
edition = "2021"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
description = "Domain RPC api definitions"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server", "client-core", "macros"] }
sp-core = { version = "21.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
thiserror = "1.0"
