[package]
name = "domain-rpc"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
edition = "2021"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
description = "Domain RPCs"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
domain-rpc-api = { path = "../rpc-api" }
jsonrpsee = { version = "0.16.2", features = ["server"] }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
sp-application-crypto = { version = "23.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
sp-core = { version = "21.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
sp-domains = { path = "../../../crates/sp-domains" }
sp-keystore = { version = "0.27.0", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }

[dev-dependencies]
tokio = "1.22.0"