[package]
name = "pallet-auto-id"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
description = "Auto ID pallet"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, git = "https://github.com/subspace/polkadot-sdk", rev = "447bbc765020674614e9ac982163f7e11e5b03ea", optional = true }
frame-support = { default-features = false, git = "https://github.com/subspace/polkadot-sdk", rev = "447bbc765020674614e9ac982163f7e11e5b03ea" }
frame-system = { default-features = false, git = "https://github.com/subspace/polkadot-sdk", rev = "447bbc765020674614e9ac982163f7e11e5b03ea" }
pem = { version = "3.0.3", default-features = false, optional = true }
ring = { version = "0.17.8", default-features = false, optional = true, features = ["wasm32_unknown_unknown_js"] }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }
sp-auto-id = { version = "0.1.0", default-features = false, path = "../../primitives/auto-id" }
sp-core = { default-features = false, git = "https://github.com/subspace/polkadot-sdk", rev = "ac2f3efb476ee3f5ac6bafefb458e9be158adb7f" }
sp-runtime = { default-features = false, git = "https://github.com/subspace/polkadot-sdk", rev = "ac2f3efb476ee3f5ac6bafefb458e9be158adb7f" }
subspace-runtime-primitives = { version = "0.1.0", default-features = false, path = "../../../crates/subspace-runtime-primitives" }
x509-parser = { version = "0.16.0", default-features = false, optional = true }

[dev-dependencies]
pem = "3.0.3"
ring = "0.17.8"
sp-io = { default-features = false, git = "https://github.com/subspace/polkadot-sdk", rev = "ac2f3efb476ee3f5ac6bafefb458e9be158adb7f" }
x509-parser = { version = "0.16.0" }

[features]
default = ["std"]
std = [
	"x509-parser",
	"pem",
	"ring",
    "codec/std",
	"frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-auto-id/std",
    "sp-core/std",
    "sp-runtime/std",
    "subspace-runtime-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-auto-id/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
    "pem",
    "ring",
    "x509-parser",
]
