[package]
name = "aes_verify"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
aes = { version = "0.8.3" }
soft-aes = { path = "../soft-aes" }
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
